<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2016 Amir Maimon, and contributors
  ~
  ~ This software is provided 'as-is', without any express or implied
  ~ warranty. In no event will the authors be held liable for any damages
  ~ arising from the use of this software.
  ~
  ~ Permission is granted to anyone to use this software for any purpose,
  ~ including commercial applications, and to alter it and redistribute it
  ~ freely, subject to the following restrictions:
  ~
  ~ 1. The origin of this software must not be misrepresented; you must not
  ~    claim that you wrote the original software. If you use this software
  ~    in a product, an acknowledgement in the product documentation would be
  ~    appreciated but is not required.
  ~ 2. Altered source versions must be plainly marked as such, and must not be
  ~    misrepresented as being the original software.
  ~ 3. This notice may not be removed or altered from any source distribution.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gitfib.hooks.sdaccounts.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:id="@+id/info">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/status_image"
            android:src="@drawable/ic_warning_black_36dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/module_status" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/status_text"
            android:text="@string/disabled"
            android:layout_below="@+id/status_image"
            android:layout_centerHorizontal="true"
            android:paddingTop="5dp"
            android:textSize="20sp"
            android:importantForAccessibility="yes" />

    </RelativeLayout>

    <gitfib.hooks.sdaccounts.NavView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nav"
        android:entries="@array/views"
        android:layout_below="@+id/info"
        android:layout_above="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/version"
        android:id="@+id/textView6"
        android:textSize="16sp"
        android:layout_gravity="bottom|right"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:importantForAccessibility="yes" />

</RelativeLayout>
