<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2016 Amir Maimon, and contributors
  ~
  ~ This software is provided 'as-is', without any express or implied
  ~ warranty. In no event will the authors be held liable for any damages
  ~ arising from the use of this software.
  ~
  ~ Permission is granted to anyone to use this software for any purpose,
  ~ including commercial applications, and to alter it and redistribute it
  ~ freely, subject to the following restrictions:
  ~
  ~ 1. The origin of this software must not be misrepresented; you must not
  ~    claim that you wrote the original software. If you use this software
  ~    in a product, an acknowledgement in the product documentation would be
  ~    appreciated but is not required.
  ~ 2. Altered source versions must be plainly marked as such, and must not be
  ~    misrepresented as being the original software.
  ~ 3. This notice may not be removed or altered from any source distribution.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttons">

            <gitfib.hooks.sdaccounts.ClickableRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="16dp"
                android:onClick="gotoAbout"
                android:tag="animatable">

                <ImageView
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:id="@+id/imageView5"
                    android:src="@drawable/ic_info_outline_black_36dp"
                    android:contentDescription="@string/about" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/about"
                    android:id="@+id/textView"
                    android:paddingStart="10dp"
                    android:gravity="center"
                    android:layout_toEndOf="@+id/imageView5"
                    android:textSize="20sp"
                    android:importantForAccessibility="yes" />
            </gitfib.hooks.sdaccounts.ClickableRelativeLayout>

            <gitfib.hooks.sdaccounts.ClickableRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="16dp"
                android:onClick="gotoForum"
                android:tag="animatable">

                <ImageView
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:id="@+id/imageView6"
                    android:src="@drawable/ic_forum_black_36dp"
                    android:contentDescription="@string/forum" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/forum"
                    android:id="@+id/textView7"
                    android:paddingStart="10dp"
                    android:gravity="center"
                    android:layout_toEndOf="@+id/imageView6"
                    android:textSize="20sp"
                    android:importantForAccessibility="yes" />
            </gitfib.hooks.sdaccounts.ClickableRelativeLayout>

            <gitfib.hooks.sdaccounts.ClickableRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="16dp"
                android:onClick="gotoSource"
                android:tag="animatable">

                <ImageView
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:id="@+id/imageView7"
                    android:src="@drawable/ic_code_black_36dp"
                    android:contentDescription="@string/source" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/source"
                    android:id="@+id/textView8"
                    android:paddingStart="10dp"
                    android:gravity="center"
                    android:layout_toEndOf="@+id/imageView7"
                    android:textSize="20sp"
                    android:importantForAccessibility="yes" />
            </gitfib.hooks.sdaccounts.ClickableRelativeLayout>

            <gitfib.hooks.sdaccounts.ClickableRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="32dp"
                android:onClick="gotoUninstall"
                android:tag="animatable">

                <ImageView
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:id="@+id/imageView8"
                    android:src="@drawable/ic_delete_black_36dp"
                    android:contentDescription="@string/uninstall" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/uninstall"
                    android:id="@+id/textView9"
                    android:paddingStart="10dp"
                    android:gravity="center"
                    android:layout_toEndOf="@+id/imageView8"
                    android:textSize="20sp"
                    android:importantForAccessibility="yes" />
            </gitfib.hooks.sdaccounts.ClickableRelativeLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>